# Budget_ai

./: .env.example  .env.production  .gitignore  README.md  pyproject.toml
backend/: requirements.txt
backend/apps/ai_services/: apps.py  services.py
backend/apps/expenses/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/expenses/migrations/: 0001_initial.py
backend/apps/users/: serializers.py  urls.py  views.py
backend/config/: settings.py  urls.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/auth/: Login.tsx  Register.tsx
frontend/src/pages/expenses/: AskAI.tsx  Dashboard.tsx  ExpenseForm.tsx  ExpenseList.tsx
